--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -315,7 +315,7 @@
 \include{background}
 \include{automatic_graph_tracking}
 \include{tracking_models}
-\include{discussion}
+\include{conclusion}
 
 % -------------------------------------------------------------------------------
 % APPENDIX
